# first_course_bayes_in_python

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 0-introduction-of-bayes.ipynb
