[tool.poetry]
name = "first-course-bayes-in-python"
version = "0.1.0"
description = ""
authors = ["takeruhakii <takeru.chonanbb@gmail.com>"]
readme = "README.md"
packages = [{include = "first_course_bayes_in_python"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
