[tool.poetry]
name = "bayes-intro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
ipykernel = "^6.29.3"
jupyterlab = "^4.1.5"
httpstan = {path = "/home/httpstan-4.12.0/dist/httpstan-4.12.0-cp311-cp311-manylinux_2_36_aarch64.whl"}
pymc = "^5.11.0"
pystan = "^3.9.0"
graphviz = "^0.20.2"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
